deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qoptisolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qoptisolve
  template:
    metadata:
      labels:
        app: qoptisolve
    spec:
      containers:
        - name: qoptisolve
          image: qoptisolve:latest
          ports:
            - containerPort: 8000
