deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qoptisolve-service
spec:
  selector:
    app: qoptisolve
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
